
no codename
========

051020: CRenderableQuad added, now drawing fullscreen postprocessing
		quads is much simpler. System now resets cached D3D stuff every
		frame; fixes some weird behavior with rendertargets (e.g. if the
		last rendertarget you render to is not backbuffer).
051017: CVertexFormat::calc[Normal/Tangent/Binorm]Offset added.
		CScreenBasedDivTextureCreator added - creates texture proportional
		to backbuffer (first BB size is made divisible by supplied amount).
		DINGUS_REGISTER_STEX_SURFACE helped macro added.
051015: CUIRollout::addChildControl()/offsetPos() added.
051011: CUIDialog::renderBegin()/renderEnd() added.
051001: Effects are checked for valid/missing state assignments (as
		required for the state restore system to work). For example,
		if you don't set SrcBlend when turning on alpha blending,
		the engine will complain.
050930: CStringHelper::countLines added.
050927: Big good change: if effects don't contain state restoring pass
		(PLast), it is automatically generated by the engine. In this
		case, you need to call setStatesConfig() on EffectBundle at
		init time, supplying script that contains knowledge of restored
		states; and use RESTORE_PASS macro in the effect file. More to
		be doc'd at dingus.berlios.de really soon now.
050925: gfx/gui/Gui.cpp fix to make it compile with VC7.1.
050917: Factored out sprite/text functions from GUI for more convenient
		immediate mode calling. getX()/getY() added to CUIDialog.
050628: Texture bundle always takes miplevels from file for DDS textures
		(previously it would build missing miplevels). Other formats
		build full mip chain like before.
050627: Poor unicode text support in GUI (drawText() only for now).
050612: utils/Pool.h fixes to make it compile with VC7.1. Fixed by
		Rich Thomson.


Dingus codenamed "IC2005 demo"
========

050523: Better error messages in texture and surface creator classes.
050518: comparison operators to time_value added.
		Gui always uses antialiased fonts now.